# eHMI

./: .gitignore  README.md  index.html  nf_build.py  pyproject.toml
docs/: index.html  manifest.json  v1.html  v2.html
ehmi/: __init__.py  anomaly.py  causal.py  cluster.py  config.py  extract.py  features.py  fetch.py  fewshot.py  model.py  pretrain.py  replay.py  report.py  train.py
nfcommon/: flows.py  metrics.py  pages.py
reports/: RESULTS.md
results/: anomaly.json  causal.json  cluster.json  fewshot.json  metrics.json
