[project]
name = "ehmi"
version = "0.1.0"
description = "eHMI cue -> pedestrian response simulator (conditional Normalizing Flow) on the TU Delft coupled-sim dataset"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=16",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "torch>=2.2",
    "zuko>=1.1",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.9.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ehmi"]
